changed all styles

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h2>Why udChalo?</h2>
+                    <div class="col-lg-6"><img src="./images/image 40.svg" class="display_small_screen_share_image" alt="" srcset=""></div>
                     <p class="why_udchalo_para">The brand udChalo is a well-known brand in the Defence. When you franchise with
                         udChalo, you become part of a powerful network where your success comes first. When you buy a
                         franchise, you buy a successful business that is ready and waiting for you to start. Although we
@@ -70,6 +71,7 @@
                 </div>
                 <div class="col-lg-6">
                     <h2>Why udChalo Franchise?</h2>
+                    <div class=""><img src="./images/BO-MockUp 1.svg" class="why_franchise_small_screen_img" alt="" srcset="">
                     <p class="why_udchalo_para">Our complete franchise solution helps you to save up the cost, time and
                         technical expertise required to build and operate your own successful business. To meet your
                         need for enormous growth, we have designed a franchise model tailored to streamline processes
