minor changes in css donr

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class=" container why_udchalo_total_div">
             <div class="row">
                 <div class="col-lg-6">
-                    <h2>Why udChalo?</h2>
+                    <h2 class="why_udchalo_heading">Why udChalo?</h2>
                     <div class="col-lg-6"><img src="./images/image 40.svg" class="display_small_screen_share_image" alt="" srcset=""></div>
                     <p class="why_udchalo_para">The brand udChalo is a well-known brand in the Defence. When you franchise with
                         udChalo, you become part of a powerful network where your success comes first. When you buy a
@@ -70,7 +70,7 @@
                 <div class="col-lg-6"><img src="./images/BO-MockUp 1.svg" class="why_udchalo_img_second" alt="" srcset="">
                 </div>
                 <div class="col-lg-6">
-                    <h2>Why udChalo Franchise?</h2>
+                    <h2 class="why_udchalo_heading">Why udChalo Franchise?</h2>
                     <div class=""><img src="./images/BO-MockUp 1.svg" class="why_franchise_small_screen_img" alt="" srcset="">
                     <p class="why_udchalo_para">Our complete franchise solution helps you to save up the cost, time and
                         technical expertise required to build and operate your own successful business. To meet your
@@ -492,7 +492,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-1"></div>
-                <div class="col-lg-5 col-md-6"><img src="./images/thomas-lefebvre-gp8BLyaTaA0-unsplash (1) 1.svg" class="why_udchalo_img_second" alt="" srcset="">
+                <div class="col-lg-5 col-md-6"><img src="./images/thomas-lefebvre-gp8BLyaTaA0-unsplash (1) 1.svg" class="why_udchalo_img_second_aa" alt="" srcset="">
                 </div>
                 <div class="col-lg col-md-6 width_small_join_second_sec">
                     <h3>Join us as a non-defence
