--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h2 class="why_udchalo_heading">Why udChalo?</h2>
-                    <div class="col-lg-6"><img src="./images/image 40.svg" class="display_small_screen_share_image" alt="" srcset=""></div>
+                    <div class="col-lg-6"><img src="./images/image 50.svg" class="display_small_screen_share_image" alt="" srcset=""></div>
                     <p class="why_udchalo_para">The brand udChalo is a well-known brand in the Defence. When you franchise with
                         udChalo, you become part of a powerful network where your success comes first. When you buy a
                         franchise, you buy a successful business that is ready and waiting for you to start. Although we
@@ -71,7 +71,7 @@
                 </div>
                 <div class="col-lg-6">
                     <h2 class="why_udchalo_heading">Why udChalo Franchise?</h2>
-                    <div class=""><img src="./images/BO-MockUp 1.svg" class="why_franchise_small_screen_img" alt="" srcset="">
+                    <div class=""><img src="./images/small.svg" class="why_franchise_small_screen_img" alt="" srcset="">
                     <p class="why_udchalo_para">Our complete franchise solution helps you to save up the cost, time and
                         technical expertise required to build and operate your own successful business. To meet your
                         need for enormous growth, we have designed a franchise model tailored to streamline processes
@@ -97,11 +97,6 @@
             <div class="row earning_img_div_row">
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <div>
-                        <img src="./images/Group 7244.svg" alt="">
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-4 col-sm-6 col-6">
-                    <div>
                         <img src="./images/Group 7331.svg" alt="">
                     </div>
                 </div>
@@ -112,17 +107,22 @@
                 </div>
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <div>
-                        <img src="./images/Group 7012.svg" alt="">
+                         <img src="./images/Group 7012.svg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <div>
-                        <img src="./images/Group 7013.svg" alt="">
+                       <img src="./images/Group 7013.svg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <div>
                         <img src="./images/Group 7014.svg" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-4 col-sm-6 col-6">
+                    <div>
+                        <img src="./images/Group 7244.svg" alt=""> 
                     </div>
                 </div>
             </div>
@@ -332,7 +332,23 @@
         </div>
     </section>
 
-
+    <section class="why_fren_section" style="background-color: #DFF2F8;">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-1"></div>
+                <div class="col-lg-5 col-md-6"><img src="./images/thomas-lefebvre-gp8BLyaTaA0-unsplash (1) 1.svg" class="why_udchalo_img_second_aa" alt="" srcset="">
+                </div>
+                <div class="col-lg col-md-6 width_small_join_second_sec">
+                    <h3>Join us as a non-defence
+                        udChalo Franchise Partner</h3>
+                    <p class="why_udchalo_para">“If you are not from the Defence Forces, no worries! You can still be part of the success story. Become a Travel Agent  with udChalo. Know-How  Please fill in the form and we will get back to you”
+                        </p>
+                    <a href="https://forms.office.com/r/DYXMc6Wt5z" class="join_us_hero show_button join_us_agent">Join US NOW</a>
+                </div>
+                <div class="col-lg-2"></div>
+            </div>
+        </div>
+    </section>
 
     <section class="section_total_faqs">
         <div>
@@ -341,7 +357,7 @@
             </div>
             <div class="accordian_total_div container ">
                 <!-- <p class="faq_heading">FAQs</p> -->
-                <button class="accordion koh-faq-question"><span style="border-left: thick solid #116735;margin-right: 20px;"></span>
+                <button class="accordion koh-faq-question"><span style="border-left: thick solid #32996A;margin-right: 20px;"></span>
                     How long can I remain as franchise partner with udChalo? <i class='fas fa-chevron-down fa-1x down_arrow_hide' id="vv0"
                         style="float: right;color:#1E54B0;margin-top: 5px;"></i><i id="ll1" class="fas fa-chevron-down"
                         style="float: right;color:#1E54B0;margin-top: 5px;"></i></button>
@@ -349,7 +365,7 @@
                     <p>The initial contract will be for 2 years which will be further extended based on performance of franchise partner</p>
                 </div>
 
-                <button class="accordion koh-faq-question"><span style="border-left:thick solid #116735;margin-right: 20px;"></span>
+                <button class="accordion koh-faq-question"><span style="border-left:thick solid #32996A;margin-right: 20px;"></span>
                     How soon I will get the commission amount? <i class='fas fa-chevron-down fa-1x down_arrow_hide' id="vv1"
                         style="float: right;color:#1E54B0;margin-top: 5px;"></i><i id="ll1" class="fas fa-chevron-down"
                         style="float: right;color:#1E54B0;margin-top: 5px;"></i></button>
@@ -357,28 +373,28 @@
                     <p>Earnings will be credited to udChalo credit on immediate basis</p>
                 </div>
 
-                <button class="accordion koh-faq-question"><span style="border-left: thick solid #116735;margin-right: 20px;"></span>
+                <button class="accordion koh-faq-question"><span style="border-left: thick solid #32996A;margin-right: 20px;"></span>
                     Would we be getting any training. <i class='fas fa-chevron-down fa-1x down_arrow_hide' id="vv2"
                         style="float: right;color:#1E54B0;margin-top: 5px;"></i><i id="ll1" class="fas fa-chevron-down"
                         style="float: right;color:#1E54B0;margin-top: 5px;"></i></button>
                 <div class="panel koh-faq-answer" style="display: none;">
                     <p>Yes, there will be 3 days training and onboarding once the documentation process is complete</p>
                 </div>
-                <button class="accordion koh-faq-question"><span style="border-left: thick solid #116735;margin-right: 20px;"></span>
+                <button class="accordion koh-faq-question"><span style="border-left: thick solid #32996A;margin-right: 20px;"></span>
                     How will I get any operational support I would require? <i class='fas fa-chevron-down fa-1x down_arrow_hide' id="vv3"
                         style="float: right;color:#1E54B0;margin-top: 5px;"></i><i id="ll1" class="fas fa-chevron-down"
                         style="float: right;color:#1E54B0;margin-top: 5px;"></i></button>
                 <div class="panel koh-faq-answer" style="display: none;">
                     <p>For operational support, we have dedicated B2B support team who are available 24*7.</p>
                 </div>
-                <button class="accordion koh-faq-question"><span style="border-left: thick solid #116735;margin-right: 20px;"></span>
+                <button class="accordion koh-faq-question"><span style="border-left: thick solid #32996A;margin-right: 20px;"></span>
                     Would I get marketing support? <i class='fas fa-chevron-down fa-1x down_arrow_hide' id="vv4"
                         style="float: right;color:#1E54B0;margin-top: 5px;"></i><i id="ll1" class="fas fa-chevron-down"
                         style="float: right;color:#1E54B0;margin-top: 5px;"></i></button>
                 <div class="panel koh-faq-answer" style="display: none;">
                     <p>Yes, we will continue to provide online and offline marketing support</p>
                 </div>
-                <button class="accordion koh-faq-question"><span style="border-left: thick solid #116735;margin-right: 20px;"></span>
+                <button class="accordion koh-faq-question"><span style="border-left: thick solid #32996A;margin-right: 20px;"></span>
                     Do I need to sign of an agreement with udChalo? <i class='fas fa-chevron-down fa-1x down_arrow_hide' id="vv5"
                         style="float: right;color:#1E54B0;margin-top: 5px;"></i><i id="ll1" class="fas fa-chevron-down"
                         style="float: right;color:#1E54B0;margin-top: 5px;"></i></button>
@@ -386,7 +402,7 @@
                     <p>Yes, Partners need to sign an agreement with udChalo which list the terms and conditions of how this relationship 
                         between partners and udChalo will work.</p>
                 </div>
-                <button class="accordion koh-faq-question"><span style="border-left: thick solid #116735;margin-right: 20px;"></span>
+                <button class="accordion koh-faq-question"><span style="border-left: thick solid #32996A;margin-right: 20px;"></span>
                     Would I be able to do anything else if I become FP? <i class='fas fa-chevron-down fa-1x down_arrow_hide' id="vv6"
                         style="float: right;color:#1E54B0;margin-top: 5px;"></i><i id="ll1" class="fas fa-chevron-down"
                         style="float: right;color:#1E54B0;margin-top: 5px;"></i></button>
@@ -488,23 +504,7 @@
 
     </section>
 
-    <section class="why_fren_section" style="background-color: #DFF2F8;">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-1"></div>
-                <div class="col-lg-5 col-md-6"><img src="./images/thomas-lefebvre-gp8BLyaTaA0-unsplash (1) 1.svg" class="why_udchalo_img_second_aa" alt="" srcset="">
-                </div>
-                <div class="col-lg col-md-6 width_small_join_second_sec">
-                    <h3>Join us as a non-defence
-                        udChalo Franchise Partner</h3>
-                    <p class="why_udchalo_para">“If you are not from the Defence Forces, no worries! You can still be part of the success story. Become a Travel Agent  with udChalo. Know-How  Please fill in the form and we will get back to you”
-                        </p>
-                    <a href="https://forms.office.com/r/DYXMc6Wt5z" class="join_us_hero show_button join_us_agent">Join US NOW</a>
-                </div>
-                <div class="col-lg-2"></div>
-            </div>
-        </div>
-    </section>
+
 
 
 
@@ -532,7 +532,7 @@
             <div class="row contact_details_div">
                 <div class="col-lg-6 flex_contact">
                     <div>
-                        <img src="https://static-preprod.udchalo.com/promotions/speedLabs/newAcademy/Group 5442.png"
+                        <img src="./images/Group 5325.svg"
                             class="contact_image" width="35" alt="">
                     </div>
                     <div>
@@ -543,7 +543,7 @@
                 </div>
                 <div class="col-lg-6 flex_contact vv">
                     <div>
-                        <img src="https://static-preprod.udchalo.com/promotions/speedLabs/newAcademy/Group 5444.png"
+                        <img src="./images/Group 5329.svg"
                             class="contact_image" width="35" alt="">
                     </div>
                     <div>
@@ -554,7 +554,7 @@
                 
                 <div class="col-lg-12 flex_contact">
                     <div>
-                        <img src="https://static-preprod.udchalo.com/promotions/speedLabs/newAcademy/Group 5443.png"
+                        <img src="./images/Group 5327.svg"
                             class="contact_image" width="35" alt="">
                     </div>
                     <div>
